syntax = "proto3";

package pb;

message Args {
    int64 Id = 1;
}

message Reply {
    int64	UID =1;
    int64	AddTime=2;
    int32	UserType=3;
    string Uface =4;
    string UserName=5;
}

message ProtoArgs {
    int32 A = 1;
    int32 B = 2;
}

message ProtoReply {
    int32 C = 1;
}